2006-09-12 Joerg Wunsch <j@uriah.heep.sax.de>

	* doc/avrdude.texi: Convert some of the tables to multitables
	in order to beautify the result.

2006-09-10 Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by Thomas Fischl: add support for USBasp.
	patch #4686: Add support for USBasp, a simple USB programmer
	* usbasp.c: New file, implement the USBasp driver.
	* usbasp.h: New file, interface declarations for USBasp.
	* Makefile.am: Wire the new files into the build.
	* avrdude.conf.in: Add the usbasp programmer entry.
	* config_gram.y: Add the usbasp token.
	* lexer.l: (Ditto.)
	* avrdude.1: Document the USBasp programmer.
	* doc/avrdude.texi: (Ditto.)

2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Implement -U filename as a shorthand for
	-U flash:w:filename:a.
	* avrdude.1: Document this.
	* doc/avrdude.texi: (Ditto.)

2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>

	Implement numerical output formats for decimal, hexadecimal,
	octal, and binary numbers.
	Closes bug #16129: more output formats for fuse bits
	(avrdude enhancement request)
	* fileio.c: Implement fileio_num() and the itoa_simple()
	helper function.
	* fileio.h: Add new file formats to FILEFMT.
	* main.c: Parse the new file formats.
	* avrdude.1: Document all this.
	* doc/avrdude.texi: (Ditto.)

2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>

	* fileio.c: CPP statements start in column #1.
	* stk500v2.c: Hide two debug/trace statements behind "verbose".

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: Describe how to disable the DWEN fuse.
	* doc/avrdude.texi: (Ditto.)

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: Translate numerical response codes to strings.

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: The avr109 programmer type no longer chokes on
	a wrong avr910 device ID, so remove that description.
	* doc/avrdude.texi: (Ditto.)

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: When failing to start in ISP mode, try